<resources>
    <string name="app_name">Movieflix HD</string>
    <string name="action_settings">Settings</string>
    <string name="name_movie">Movie Title</string>
    <string name="movie_details">Movie Details</string>
    <string name="summary">Summary</string>
    <string name="rating">User Rating</string>
    <string name="release">Release Date</string>
    <string name="sort_order_label">Sort Order</string>
    <string name="sort_order_key">sortorder</string>
    <string name="most_popular">Most Popular</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="produced_country">Produced Country</string>
    <string name="movie_filters">Movie Filters</string>
    <string name="producting_year">Producting Year</string>
    <string name="pick_a_date">Pick a Date</string>
    <string name="sort_by">Sort By</string>
    <string name="delete_movie_filters">Delete Movie Filters</string>
    <string name="not_specified">Not Specified</string>
    <string name="tv_filters">Series Filters</string>
    <string name="delete_tv_filters">Delete TV Filters</string>
    <string name="app_language">App Language</string>
    <string name="title_activity_video_ad">VideoAd</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>

</resources>
