<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BFC1D3"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                android:elevation="3dp"
                card_view:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/filterTitle"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:textColor="#BFC1D3"
                        android:background="@color/colorPrimary"
                        android:text="@string/movie_filters"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:textSize="16sp"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_below="@id/filterTitle"
                        android:gravity="center"
                        android:padding="7dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="7dp"
                            android:text="@string/produced_country"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/movieCountry"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="7dp"
                            android:text="All"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="#BFC1D3"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="7dp"
                            android:text="@string/producting_year"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/movieDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="7dp"
                            android:text="All"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="#BFC1D3"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="7dp"
                            android:text="@string/sort_by"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/movieSort"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="7dp"
                            android:text="@string/not_specified"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="#BFC1D3"/>
                        <TextView
                            android:id="@+id/movieDelete"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="7dp"
                            android:text="@string/delete_movie_filters"
                            android:textAlignment="center"
                            android:textColor="#BD2323"
                            android:textStyle="bold"/>

                    </LinearLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                android:elevation="3dp"
                card_view:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/filterTitle2"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:textColor="#BFC1D3"
                        android:background="@color/colorPrimary"
                        android:text="@string/tv_filters"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:textSize="16sp"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_below="@id/filterTitle2"
                        android:gravity="center"
                        android:padding="7dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="7dp"
                            android:text="@string/produced_country"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/tvCountry"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="7dp"
                            android:text="All"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="#BFC1D3"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="7dp"
                            android:text="@string/producting_year"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/tvDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="7dp"
                            android:text="All"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="#BFC1D3"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="7dp"
                            android:text="@string/sort_by"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/tvSort"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="7dp"
                            android:text="@string/not_specified"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="#BFC1D3"/>
                        <TextView
                            android:id="@+id/tvDelete"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="7dp"
                            android:text="@string/delete_tv_filters"
                            android:textAlignment="center"
                            android:textColor="#BD2323"
                            android:textStyle="bold"/>

                    </LinearLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>